# hyprface

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
config/: config.json
pam/: Makefile  install.sh  pam_hyprface.c  uninstall.sh
src/auth/: authenticator.py  result.py
src/camera/: capture.py  discover.py  doctor.py  manager.py
src/cli/: main.py
src/config/: config.py
src/recognition/: database.py  embedder.py  matcher.py
src/service/: client.py  daemon.py
src/utils/: env.py
