[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyprface"
version = "0.4.0"
description = "Facial authentication system for Linux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "insightface",
    "onnxruntime",
    "numpy",
]

[project.scripts]
hyprface = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
